# DagWeaver

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: PR_DESCRIPTION.md
src/dagweaver/: __init__.py  builders.py  errors.py  filters.py  lineage.py  models.py  weave.py
tests/: conftest.py  restart_airflow.sh  start_airflow.sh  stop_airflow.sh  test_dagweaver.py  test_lineage.py  test_package.py
tests/weaver/dags/: test_dag.py
tests/weaver/weaves/n1__imports/gdrive/: imp_gdrive__row_data.py  imp_gdrive__row_data2.py
tests/weaver/weaves/n1__imports/gdrive/base/: imp_gdrive_base__rows.py
tests/weaver/weaves/n2__staging/gdrive/: stg_gdrive__row_data.py
tests/weaver/weaves/n3__intermediate/home/: int_home__aggregated_data.py
