[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dagweaver"
version = "0.1.0"
description = "Library for Apache Airflow DAG development"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "apache-airflow>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]
